--- a/app/src/main/res/layout/fragment_survey.xml
+++ b/app/src/main/res/layout/fragment_survey.xml
@@ -58,7 +58,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/corner_radius"
+        android:background="@drawable/button_background_shape"
         android:fontFamily="sans-serif"
         android:text="Changed your mind?"
         android:textColor="#000000"
