--- a/app/src/main/res/layout/holder_question.xml
+++ b/app/src/main/res/layout/holder_question.xml
@@ -14,7 +14,7 @@
         android:layout_marginEnd="8dp"
         android:fontFamily="sans-serif"
         android:text="კითხვა / question"
-        android:textColor="#000000"
+        android:textColor="?attr/textClr"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
