--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,4 +42,8 @@
         <item name="android:windowExitAnimation">@anim/popup_exit</item>
     </style>
 
+    <style name="SwitchCompatTheme" >
+        <item name="colorControlActivated"> @color/darkButtonColorStart </item>
+    </style>
+
 </resources>
