--- a/app/src/main/res/layout/switch_menu.xml
+++ b/app/src/main/res/layout/switch_menu.xml
@@ -7,5 +7,6 @@
         android:id="@+id/switch_theme"
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
+        android:theme="@style/SwitchCompatTheme"
         android:text="" />
 </LinearLayout>
