--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,14 +5,48 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
-    android:background="?attr/backgroundClr">
+    android:background="#F4BB30">
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/login_back1" />
+
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:adjustViewBounds="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.45"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/georgia_map" />
+
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="65dp"
+        android:background="@drawable/ic_app_trans"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
         android:background="@drawable/rounded_background"
+        android:backgroundTint="@color/lightComponentColor"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,7 +68,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@drawable/tl_rounded_component"
-                android:backgroundTint="?attr/componentClr"
+                android:backgroundTint="@color/lightComponentColor"
                 android:text="Log in" />
 
             <Button
@@ -43,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@drawable/tr_rounded_component"
-                android:backgroundTint="?attr/backgroundClr"
+                android:backgroundTint="@color/lightBackground"
                 android:text="Sign Up" />
         </LinearLayout>
 
@@ -54,7 +88,7 @@
             android:layout_marginTop="16dp"
             android:paddingLeft="8dp"
             android:text="Personal Number"
-            android:textColor="?attr/textClr"
+            android:textColor="@color/lightTextColor"
             android:textSize="15sp"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout"
             tools:layout_editor_absoluteX="0dp" />
@@ -67,7 +101,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/rounded_background"
-            android:backgroundTint="?attr/backgroundClr"
+            android:backgroundTint="@color/lightBackground"
             android:ems="10"
             android:hint="e.g. 01001234567"
             android:inputType="textPersonName"
@@ -84,7 +118,7 @@
             android:layout_marginTop="8dp"
             android:paddingStart="8dp"
             android:text="Password"
-            android:textColor="?attr/textClr"
+            android:textColor="@color/lightTextColor"
             android:textSize="15sp"
             app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
             tools:layout_editor_absoluteX="-16dp" />
@@ -104,7 +138,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:background="@drawable/rounded_background"
-                android:backgroundTint="?attr/backgroundClr"
+                android:backgroundTint="@color/lightBackground"
                 android:hint="a-z, A-Z, 1-9"
                 android:inputType="textPassword"
                 android:padding="8dp" />
@@ -136,7 +170,7 @@
             android:layout_marginTop="8dp"
             android:paddingStart="8dp"
             android:text="Phone Number"
-            android:textColor="?attr/textClr"
+            android:textColor="@color/lightTextColor"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -151,7 +185,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/rounded_background"
-            android:backgroundTint="?attr/backgroundClr"
+            android:backgroundTint="@color/lightBackground"
             android:ems="10"
             android:hint="e.g. +995597555555"
             android:inputType="phone"
@@ -168,7 +202,7 @@
             android:layout_marginTop="8dp"
             android:paddingStart="8dp"
             android:text="Enter Code"
-            android:textColor="?attr/textClr"
+            android:textColor="@color/lightTextColor"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -182,7 +216,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/rounded_background"
-            android:backgroundTint="?attr/backgroundClr"
+            android:backgroundTint="@color/lightBackground"
             android:ems="10"
             android:hint="e.g. 123456"
             android:inputType="phone"
@@ -207,4 +241,5 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/phoneCode" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
