--- a/app/src/main/res/layout/fragment_problem_post.xml
+++ b/app/src/main/res/layout/fragment_problem_post.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/rounded_background"
     android:backgroundTint="?attr/backgroundClr">
 
     <EditText
@@ -14,7 +13,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:backgroundTint="?attr/textClr"
+        android:background="@drawable/ic_email"
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
