--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,7 +5,7 @@
     android:id="@+id/profile"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/design_default_color_background"
+    android:background="?attr/backgroundClr"
     tools:context=".nav.profile.ProfileFragment">
 
     <ImageView
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="cursive"
         android:text="Tell a little bit about yourself"
+        android:textColor="?attr/textClr"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,11 +49,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
             android:text="Select your age range"
             android:textAlignment="viewStart"
-            android:textColor="#000000"
+            android:textColor="?attr/textClr"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -66,19 +67,20 @@
             <Spinner
                 android:id="@+id/spinner"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
         </androidx.cardview.widget.CardView>
+
         <TextView
             android:id="@+id/selectGender"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
             android:text="Your gender"
             android:textAlignment="viewStart"
-            android:textColor="#000000"
+            android:textColor="?attr/textClr"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -92,7 +94,7 @@
             <Spinner
                 android:id="@+id/spinner2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
         </androidx.cardview.widget.CardView>
 
         <TextView
@@ -100,10 +102,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
             android:text="Region you live"
-            android:textColor="#000000"
+            android:textColor="?attr/textClr"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -128,6 +130,7 @@
             android:layout_marginTop="32dp"
             android:layout_marginEnd="16dp"
             android:textAlignment="textStart"
+            android:textColor="?attr/textClr"
             tools:text="@string/intro" />
 
     </LinearLayout>
