--- a/app/src/main/res/layout/fragment_public_pager.xml
+++ b/app/src/main/res/layout/fragment_public_pager.xml
@@ -5,6 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/public_tablayout"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tabBackground="?attr/componentClr"
+        app:tabIndicatorColor="@color/darkButtonColorEnd"
+        app:tabMode="scrollable"
+        app:tabSelectedTextColor="@color/darkButtonColorEnd"
+        app:tabTextColor="?attr/textClr">
+
+    </com.google.android.material.tabs.TabLayout>
+
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
         android:layout_width="0dp"
@@ -12,5 +27,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/public_tablayout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
