--- a/app/src/main/res/layout/fragment_public.xml
+++ b/app/src/main/res/layout/fragment_public.xml
@@ -1,118 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/home"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="?attr/backgroundClr"
     tools:context=".nav.publics.PublicFragment">
 
-    <ScrollView
+    <com.github.mikephil.charting.charts.BarChart
+        android:id="@+id/bar_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="350dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <!--            <com.anychart.AnyChartView-->
-            <!--                android:id="@+id/any_chart_view"-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="350dp">-->
-            <!--            </com.anychart.AnyChartView>-->
-
-            <com.github.mikephil.charting.charts.BarChart
-                android:id="@+id/bar_view"
-                android:layout_width="match_parent"
-                android:layout_height="350dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="16dp" />
-
-            <!--            <com.github.aachartmodel.aainfographics.aachartcreator.AAChartView-->
-            <!--                android:id="@+id/aa_chart_view"-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="350dp">-->
-            <!--            </com.github.aachartmodel.aainfographics.aachartcreator.AAChartView>-->
-
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginBottom="12dp"
-                android:text="Age"
-                android:textColor="?attr/textClr"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                app:cardCornerRadius="12dp">
-
-                <Spinner
-                    android:id="@+id/spinner4"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:popupBackground="@drawable/rounded_background" />
-
-            </androidx.cardview.widget.CardView>
-
-            <TextView
-                android:id="@+id/textView8"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginBottom="12dp"
-                android:text="Gender"
-                android:textColor="?attr/textClr"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                app:cardCornerRadius="12dp">
-
-            <Spinner
-                android:id="@+id/spinner5"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:popupBackground="@drawable/rounded_background"/>
-            </androidx.cardview.widget.CardView>
-
-            <Button
-                android:id="@+id/filterBtn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginBottom="12dp"
-                android:layout_marginEnd="10dp"
-                android:background="@drawable/button_background_shape"
-                android:text="FILTER"
-                android:textSize="18sp" />
-
-            <!--            <com.github.aachartmodel.aainfographics.aachartcreator.AAChartView-->
-            <!--                android:id="@+id/aa_chart_view2"-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="350dp">-->
-            <!--            </com.github.aachartmodel.aainfographics.aachartcreator.AAChartView>-->
-        </LinearLayout>
-    </ScrollView>
-
-</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
