--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -17,17 +17,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/login_back1" />
 
-    <ImageView
-        android:id="@+id/imageView8"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:adjustViewBounds="true"
+    <com.richpath.RichPathView
+        android:id="@+id/georgia_back"
+        android:layout_width="300dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.45"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/georgia_map" />
+        app:vector="@drawable/ic_georgia" />
 
     <ImageView
         android:id="@+id/imageView6"
