--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,14 +13,11 @@
             android:id="@+id/nav_survey"
             android:icon="@drawable/checking"
             android:title="@string/menu_survey" />
-
-        <item
-            android:id="@+id/blankFragment"
-            android:icon="@drawable/ic_nav_problems"
-            android:title="test" />
     </group>
 
-    <item android:title="Tribune">
+    <item
+        android:id="@+id/tribune"
+        android:title="Tribune">
         <menu>
             <group android:checkableBehavior="single">
                 <item
@@ -41,7 +38,8 @@
         </menu>
     </item>
 
-    <item android:title="Options">
+    <item android:id="@+id/options"
+        android:title="Options">
         <menu>
             <item android:id="@+id/nav_switch"
                 app:actionLayout="@layout/switch_menu"
