--- a/app/src/main/res/layout/fragment_problem_post.xml
+++ b/app/src/main/res/layout/fragment_problem_post.xml
@@ -22,7 +22,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/post_button"
+        android:id="@+id/post_button1"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:layout_marginBottom="32dp"
