--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/nav_header"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@color/design_default_color_secondary_variant"
+    android:background="#FFC107"
     android:backgroundTintMode="add"
     android:gravity="bottom"
     android:orientation="vertical"
@@ -19,6 +19,8 @@
             android:id="@+id/app_nav_header_background"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
             android:contentDescription="@string/nav_header_desc"
             app:vector="@drawable/ic_georgia" />
 
