--- a/app/src/main/res/layout/choose_region.xml
+++ b/app/src/main/res/layout/choose_region.xml
@@ -4,12 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/rounded_background">
+    android:background="@drawable/border_shape">
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:text="საჭიროების შემთხვევაში, დაამატეთ რეგიონის შეზღუდვა"
         android:textAlignment="center"
         android:textColor="?attr/textClr"
@@ -121,7 +124,7 @@
     <TextView
         android:id="@+id/textView3"
         android:layout_width="0dp"
-        android:layout_height="22dp"
+        android:layout_height="18dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
