--- a/app/src/main/res/layout/fragment_election.xml
+++ b/app/src/main/res/layout/fragment_election.xml
@@ -11,6 +11,10 @@
         android:id="@+id/elections_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
