--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -97,70 +97,89 @@
                 android:layout_height="wrap_content" />
         </androidx.cardview.widget.CardView>
 
-        <androidx.cardview.widget.CardView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
-            app:cardCornerRadius="12dp">
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/rounded_background"
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/region"
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
-                tools:text="რეგიონი" />
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="10dp">
 
-        </androidx.cardview.widget.CardView>
+                <TextView
+                    android:id="@+id/region"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="?attr/componentClr"
+                    android:textColor="?attr/textClr"
+                    android:textSize="16sp"
+                    tools:text="რეგიონი" />
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            app:cardCornerRadius="12dp">
+            </androidx.cardview.widget.CardView>
 
-            <TextView
-                android:id="@+id/full_name"
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:text="სახელი გვარი" />
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="10dp">
 
-        </androidx.cardview.widget.CardView>
+                <TextView
+                    android:id="@+id/full_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="?attr/componentClr"
+                    android:textColor="?attr/textClr"
+                    tools:text="სახელი გვარი" />
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            app:cardCornerRadius="12dp">
+            </androidx.cardview.widget.CardView>
 
-            <TextView
-                android:id="@+id/birth_date"
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:text="დაბადების თარიღი: 04/06/1999" />
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="10dp">
 
-        </androidx.cardview.widget.CardView>
+                <TextView
+                    android:id="@+id/birth_date"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="?attr/componentClr"
+                    android:textColor="?attr/textClr"
+                    tools:text="დაბადების თარიღი: 04/06/1999" />
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            app:cardCornerRadius="12dp">
+            </androidx.cardview.widget.CardView>
 
-            <TextView
-                android:id="@+id/address"
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:text="მიმდინარე მისამართი: სოფ. დიღომი, თამარ მეფის ქუჩა 6/3." />
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp">
 
-        </androidx.cardview.widget.CardView>
+                <TextView
+                    android:id="@+id/address"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="?attr/componentClr"
+                    android:textColor="?attr/textClr"
+                    tools:text="მიმდინარე მისამართი: სოფ. დიღომი, თამარ მეფის ქუჩა 6/3." />
+
+            </androidx.cardview.widget.CardView>
+
+
+
+        </LinearLayout>
 
     </LinearLayout>
 
