--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/nav_header"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="#FFC107"
+    android:background="@color/darkButtonColorStart"
     android:backgroundTintMode="add"
     android:gravity="bottom"
     android:orientation="vertical"
